Fixed articletools alignment issue in IE, though not a very pretty solution...

--- a/crimsononline/static/css/single_content.css
+++ b/crimsononline/static/css/single_content.css
@@ -3,11 +3,24 @@ div#pre_content {
     float: left;
 }
 
+div#logoshit {
+    padding: 0px 0 7px;
+	width:526px;
+	display: block;
+    color: #666;
+    float: left;
+    font-size: 11px;
+    text-transform: uppercase;
+    font-family: arial, sans-serif;
+}
+
 /* ARTICLE TOOLS */
 #articletools {
+	text-align:right;
+	width:115px;
     display: block;
     color: #666;
-    float: right;
+    float: left;
     font-size: 12px;
     margin-right: -10px;
     text-transform: uppercase;
